# pinktrombone_cpp

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  Makefile  README.md  aspire.js  fricative.js  input2.js  metrics.ipynb  pyproject.toml  setup.py  test.cpp  test.ipynb  test.py  test.sh  test_noise.ipynb  train.ipynb  train.py  white.js
app/: CMakeLists.txt  main.cpp  pch.h  test.cpp
csrc/: capi.cpp  capi.h  noise.cpp  pinktrombone.cpp  pymain.c
include/: pch.h  pinktrombone.h
src/: noise.cpp  test.cpp
src/pinktrombone/: __init__.py
src/voice100_pinktrombone/: __init__.py
tests/: test.py
